tdf#114338 don't crash on watermark insert w/ existing header

Change-Id: I63abaf48c33d6660f1829b7d503de295e4a57f9c